--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "moment": "^2.29.1",
     "next": "^12.0.1",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
